# blog-michal-theme

./: .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.rst  gulpfile.js  package-lock.json  package.json  setup.cfg  setup.py  version.py
.github/workflows/: ci.yaml
michal_theme/: apps.py
michal_theme/static/css/: main.css  main.css.map  main.min.css  michal.css  michal.css.map
michal_theme/static/scss/: _variables.scss
michal_theme/templates/: base.html
michal_theme/templates/includes/: symbols.html
