[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
name = blog-michal-theme
version = attr: michal_theme.__version__
include_package_data = true
license = BSD License
packages = find:
description = A Simple Theme
long_description = file: README.rst
url = https://michal.g10f.de
author = Gunnar Scherf
author_email = mail@g10f.de
classifiers=
    Environment :: Web Environment
    Framework :: Wagtail
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
  django